// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/settings/repositoryLocationListItem matches snapshot for device 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      settings.modelDefinitions.repositoryTypes.device.label
    </div>
    <CustomizedIconButton
      ariaLabel="settings.cancel"
      className="remove-button"
      iconProps={
        Object {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="settings.cancel"
    />
  </div>
</div>
`;

exports[`components/settings/repositoryLocationListItem matches snapshot for private 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <MaskedCopyableTextField
        allowMask={true}
        ariaLabel="settings.modelDefinitions.repositoryTypes.private.textBoxLabel"
        disabled={false}
        label="settings.modelDefinitions.repositoryTypes.private.textBoxLabel"
        onTextChange={[Function]}
        placeholder="settings.modelDefinitions.repositoryTypes.private.placeholder"
        required={true}
        t={
          [MockFunction] {
            "calls": Array [
              Array [
                "settings.modelDefinitions.repositoryTypes.private.textBoxLabel",
              ],
              Array [
                "settings.modelDefinitions.repositoryTypes.private.textBoxLabel",
              ],
              Array [
                "settings.modelDefinitions.repositoryTypes.private.placeholder",
              ],
              Array [
                "settings.cancel",
              ],
              Array [
                "settings.cancel",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": "settings.modelDefinitions.repositoryTypes.private.textBoxLabel",
              },
              Object {
                "type": "return",
                "value": "settings.modelDefinitions.repositoryTypes.private.textBoxLabel",
              },
              Object {
                "type": "return",
                "value": "settings.modelDefinitions.repositoryTypes.private.placeholder",
              },
              Object {
                "type": "return",
                "value": "settings.cancel",
              },
              Object {
                "type": "return",
                "value": "settings.cancel",
              },
            ],
          }
        }
        value=""
      />
    </div>
    <CustomizedIconButton
      ariaLabel="settings.cancel"
      className="remove-button"
      iconProps={
        Object {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="settings.cancel"
    />
  </div>
</div>
`;

exports[`components/settings/repositoryLocationListItem matches snapshot for public 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      settings.modelDefinitions.repositoryTypes.public.label
    </div>
  </div>
</div>
`;
